--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.17.4
   cloud_firestore: ^4.15.5
+  flutter_zoom_drawer: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  # - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
