--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.4.1
   universal_html: ^2.0.8
+  google_maps_flutter: ^2.5.3
 
 dev_dependencies:
   flutter_test:
