--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   geolocator: ^10.1.0
   image_picker: ^1.0.4
+  image_picker_for_web: ^2.0.0
   firebase_storage: ^11.4.1
   universal_html: ^2.0.8
   google_maps_flutter: ^2.5.3
